--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "bootstrap-material-design": "~0.3.0",
     "bootstrap": "~3.3.4",
     "angular": "~1.3.15",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "angular-resource": "~1.3.15"
   }
 }
