--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "ejs": "^2.3.1",
     "express": "^4.12.3",
-    "nunjucks": "^1.2.0"
+    "nunjucks": "^1.2.0",
+    "sanitizer": "^0.1.2"
   }
 }
