--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "~3.3.4",
     "angular": "~1.3.15",
     "angular-ui-router": "~0.2.13",
-    "angular-resource": "~1.3.15"
+    "angular-resource": "~1.3.15",
+    "angular-google-maps": "~2.0.17"
   }
 }
