--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "nunjucks": "^1.2.0",
-    "sanitizer": "^0.1.2"
+    "sanitizer": "^0.1.2",
+    "validator": "^3.34.0"
   }
 }
