--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular": "~1.3.15",
     "angular-ui-router": "~0.2.13",
     "angular-resource": "~1.3.15",
-    "angular-google-maps": "~2.0.17"
+    "angular-google-maps": "~2.0.17",
+    "chartjs": "~1.0.2"
   }
 }
