--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-ui-router": "~0.2.13",
     "angular-resource": "~1.3.15",
     "angular-google-maps": "~2.0.17",
-    "chartjs": "~1.0.2"
+    "chartjs": "~1.0.2",
+    "slick.js": "~1.4.1"
   }
 }
